2007-09-25 yo
* Set module group on portal types.

2007-09-09 Kazuhiko
* rename edit to calculate in invoice_causality_workflow.

2007-08-29 Yusei
* Added new view action for module.

2007-08-13 Jerome
* Remove portal type actions that are now defined as global actions

2006-08-29 jerome
* set resource editable on accounting transaction lines.

2006-08-24 jerome
* empty default_invoice_transaction_rule. It's part of the configuration and should not be included in this BT.

2006-08-21 jerome
* filter GAP ID using strict_membership in account module  list.

2006-08-11 jerome
* remove InvoiceTransactionLine_getDestinationItemList and InvoiceTransactionLine_getSourceItemList in favor of AccountingTransactionLine_getNodeItemList, which fixes source/destination inversion on lines ids for Purchase Invoice Transactions.

2006-07-03 Kevin
* Move Base_importGapFile script from gap_importer business template.

2006-06-15 Kevin
* Revert previous commit.

2006-06-14 Kevin
* Return corporate name if possible when displaying the list of organisations.

2006-06-12 Kevin
* Add Closing Transaction Line portal type to use in AccountingTransactionModule_createClosingTransaction script.

2006-06-09 Kevin
* Delete empty accounting lines in roundDebitCredit script.

2006-06-08 Kevin
* Don't create empty lines when the closing balance is generated.
* Add direct link to the wrong transaction object when closing the accounting period.

2006-06-07 Kevin
* Delete aggregation per regional zone (export/local) feature because its not enough flexible (for example, if you fix the region of a third party, you need to regenerate the Closing Balance).

2006-06-06 Kevin
* Don't copy id when create a reversal transaction.
* Fix default warning message displaying in Account_getGapItemList.
* Add Closing Transaction portal type.
* Update Closing Transaction Creation script to support aggregation per regional zone (export/local) or third party.

2006-06-05 Kevin