@@ -1,3 +1,6 @@
+2007-10-03 yo
+* Remove start_date and stop_date from invoice_causality_workflow.
+
 2007-09-25 yo
 * Set module group on portal types.
 
